--- a/styles.css
+++ b/styles.css
@@ -8,28 +8,29 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  color: #222;
-  background: #f7f5f0;
+  color: #ffffff;
+  background: #020d10;
 }
 /* Link Styles */
 
 a {
   text-decoration: none;
-  color: #999;
+  color: #ffffff;
 }
 a:hover {
-  color: #6633ff;
+  color: #ffffff;
 }
 
 /* Section Styles */
 
 .main-nav {
   width: 100%;
-  background: black;
+  background: transparent;
   min-height: 30px;
   padding: 10px;
-  position: fixed;
+  position: relative;
   text-align: center;
+  z-index: 2;
 }
 .nav {
   display: flex;
@@ -46,47 +47,58 @@ a:hover {
     color: white;
 }
 .nav li {
-  padding: 5px 10px 10px 10px;
+  padding: 10px;
 }
-.nav a {
+.nav a, .nav .name {
+  padding-bottom: 5px;
+  border-bottom: 3px solid transparent;
   transition: all .5s;
+  font-size: 14px;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: .3rem;
 }
-.nav a:hover {
-  color: white
+.nav a:hover, .nav .active a {
+  color: white;
+    border-bottom-color: #fff;
 }
 
 header {
+  line-height: 1.5;
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/new_background.jpg') no-repeat top center;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
-}
-header {
-  line-height: 1.5;
+  padding-bottom: 60px;
+  margin-top: -60px;
+  position: relative;
+  box-shadow: inset 0 120px 60px -30px #020d10;
 }
 header .profile-image {
   margin-top: 50px;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border: 3px solid white;
+  width: 250px;
+    height: 250px;
+  border-radius: 4px;
+  border: 7px solid #ffffff;
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.3) rotate(-7deg);
 }
 .tag {
-  background-color: #efefef;
-  color: black;
-  padding: 10px;
-  border-radius: 5px;
-  display: table;
-  margin: 10px auto;
+  background-color: #020d10;
+    color: #ffffff;
+    padding: 10px 10px 10px 10px;
+    border-radius: 4px;
+    display: table;
+    min-width: 250px;
+    margin: 0px auto;
+    max-width: 250px;
 } 
 .location {
-  background-color: #222;
-  color: yellow;
+  background-color: #020d10;
+    margin-top: 5px;
 }
 .card {
   margin: 30px;
@@ -95,11 +107,19 @@ header .profile-image:hover {
   text-align: left;
   background: #fff;
   border-bottom: 4px solid #ccc;
+  color: #020d10;
   border-radius: 6px;
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #2c3f43;
+}
+
+.card a {
+  background-color: cyan;
+  padding: 0 3px;
+  color: #020d10;
+  font-style: italic;
 }
 
 ul.skills {
@@ -127,8 +147,7 @@ footer {
 }
 
 footer .copyright {
-  top: -8px;
-  font-size: .75em;
+  font-size: .75rem;
 }
 
 footer ul {
@@ -148,8 +167,9 @@ a.social {
   width: 30px;
   height: 30px;
   background-size: 30px 30px;
-  opacity: .4;
+  opacity: 1;
   transition: all .5s;
+  filter: grayscale();
 }
 a.twitter {
   background-image: url(images/twitter.svg);
@@ -187,7 +207,6 @@ a.social:hover {
     max-width: 1200px;
     padding: 0 30px;
   }
-
 
   main {
     padding-top: 20px;
