--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ a {
   text-decoration: none;
   color: #ffffff;
 }
-a:hover {
+a:hover, a:visited, a:active {
   color: #ffffff;
 }
 
@@ -49,7 +49,7 @@ a:hover {
 .nav li {
   padding: 10px;
 }
-.nav a, .nav .name {
+.nav a {
   padding-bottom: 5px;
   border-bottom: 3px solid transparent;
   transition: all .5s;
@@ -61,6 +61,9 @@ a:hover {
 .nav a:hover, .nav .active a {
   color: white;
     border-bottom-color: #fff;
+}
+.nav .name a {
+  border-bottom-color: transparent;
 }
 
 header {
@@ -77,8 +80,9 @@ header {
 }
 header .profile-image {
   margin-top: 50px;
-  width: 250px;
-    height: 250px;
+  width: 100%;
+  max-width: 250px;
+    height: inherit;
   border-radius: 4px;
   border: 7px solid #ffffff;
   transition: all .5s;
@@ -222,5 +226,15 @@ a.social:hover {
     margin: 40px auto;
   }
 
+}
+
+@media screen and (max-width: 719px) {
+  .nav {
+    max-width: 100%;
+    flex-direction: column;
+  }
+  .nav .name {
+    margin: 0 auto;
+  }
 }
 
