--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ ul.skills {
 footer {
   width: 100%;
   min-height: 30px;
-  padding: 20px 0 40px 20px;
+  padding: 0;
 }
 
 footer .copyright {
@@ -213,7 +213,7 @@ a.social:hover {
   }
 
   main {
-    padding-top: 20px;
+    padding-top: 0;
   }
 
   main p {
@@ -223,7 +223,7 @@ a.social:hover {
   footer {
     font-size: 1.3em;
     max-width: 1200px;
-    margin: 40px auto;
+    margin: 0 auto 40px auto;
   }
 
 }
